--- a/_data/data.yml
+++ b/_data/data.yml
@@ -1,5 +1,5 @@
 #
-# Be aware that even a small syntax error here can lead to failures in output.dsfd
+# Be aware that even a small syntax error here can lead to failures in output
 #
 
 sidebar:
@@ -7,31 +7,27 @@ sidebar:
     education: True # set to False if you want education in main section instead of in sidebar
 
     # Profile information
-    name: Alan Doe
-    tagline: Full Stack Developer
+    name: Pulkit Mathur
+    tagline: Machine Learning Enthusiast
     avatar: profile.png  #place a 100x100 picture inside /assets/images/ folder and provide the name of the file below
 
     # Sidebar links
-    email: hello@webjeda.com
-    phone: 012 345 6789
+    email: pulkit@cs.toronto.edu
+    phone: (416) 732-9250
     website: blog.webjeda.com #do not add http://
-    linkedin: alandoe
-    github: sharu725
+    linkedin: pulkit-mathur-93244a116
+    github: mathurp
     gitlab:
     bitbucket:
-    twitter: '@webjeda'
     stack-overflow: # Number/Username, e.g. 123456/alandoe
     codewars:
     goodreads: # Number-Username, e.g. 123456-alandoe
 
     languages:
-      - idiom: English
+      - idiom: Hindi
         level: Native
 
-      - idiom: French
-        level: Professional
-
-      - idiom: Spanish
+      - idiom: English
         level: Professional
 
     interests:
@@ -46,20 +42,15 @@ sidebar:
 
 career-profile:
     title: Career Profile
-    summary: |
-      Summarise your career here lorem ipsum dolor sit amet, consectetuer
-      adipiscing elit. You can [download this free resume/CV template here]().
-      Aenean commodo ligula eget dolor aenean massa. Cum sociis natoque
-      penatibus et magnis dis parturient montes, nascetur ridiculus mus.
-      Donec quam felis, ultricies nec, pellentesque eu.
-
-      Second paragraph if required.
-
+    summary:
+      I'm currently a MScAc (Data Science concentration) student looking for opportunities in Machine Learning and Data Analytics area. 
+      My aim so far is to bring innovation to the table and leverage technology to transform an idea into a product.
+      
 education:
     - degree: MSc in Computer Science
       university: University of London
       time: 2011 - 2012
-      details: |
+      details: 
         Describe your study here lorem ipsum dolor sit amet, consectetuer
         adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum
         sociis natoque penatibus et magnis dis parturient montes, nascetur
@@ -72,7 +63,7 @@ education:
     - degree: BSc in Applied Mathematics
       university: Bristol University
       time: 2007 - 2011
-      details: |
+      details: 
         Describe your study here lorem ipsum dolor sit amet, consectetuer
         adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum
         sociis natoque penatibus et magnis dis parturient montes, nascetur
